--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
                     <p><br></p>
                     <p><br></p>
                     <p><br></p>
-                    <p class="textAlignRight">Coloca o telemóvel</p>
-                    <p class="textAlignRight">na horizontal</p>
+                    <p class="desktopNone textAlignRight">Coloca o telemóvel</p>
+                    <p class="desktopNone textAlignRight">na horizontal</p>
                 </div>
                 <div class="col-10-desktop">
                     <p>Luz</p>
-
                 </div>
             </div>
         </div>
@@ -223,12 +222,10 @@
                                         onclick="loadGroup(1)">Luz</p>
                                 </div>
                                 <div class="faixaTitle">
-                                    <p class="hover-link faixa faixaNum" data-track="2" onclick="loadGroup(2)">Fim de
-                                        Tarde</p>
+                                    <p class="hover-link faixa faixaNum" data-track="2" onclick="loadGroup(2)">Fim de Tarde</p>
                                 </div>
                                 <div class="faixaTitle">
-                                    <p class="hover-link faixa faixaNum" data-track="3" onclick="loadGroup(3)">
-                                        Instantâneo</p>
+                                    <p class="hover-link faixa faixaNum" data-track="3" onclick="loadGroup(3)">Instantâneo</p>
                                 </div>
                                 <div class="faixaTitle">
                                     <p class="hover-link faixa faixaNum" data-track="4" onclick="loadGroup(4)">
@@ -238,40 +235,36 @@
                                     </p>
                                 </div>
                                 <div class="faixaTitle">
-                                    <p class="hover-link faixa faixaNum" data-track="5" onclick="loadGroup(5)">Periferia
-                                    </p>
+                                    <p class="hover-link faixa faixaNum" data-track="5" onclick="loadGroup(5)">Periferia</p>
                                 </div>
                                 <div class="faixaTitle">
-                                    <p class="hover-link faixa faixaNum" data-track="6" onclick="loadGroup(6)">O Cão
-                                        Sozinho</p>
+                                    <p class="hover-link faixa faixaNum" data-track="6" onclick="loadGroup(6)">O Cão Sozinho</p>
                                 </div>
                                 <div class="faixaTitle">
-                                    <p class="hover-link faixa faixaNum" data-track="7" onclick="loadGroup(7)">Canção
-                                        dos
+                                    <p class="hover-link faixa faixaNum" data-track="7" onclick="loadGroup(7)">Canção dos
                                         <br>Brancos Negros
                                     </p>
                                 </div>
                                 <div class="faixaTitle">
-                                    <p class="hover-link faixa faixaNum" data-track="8" onclick="loadGroup(8)">Altura
-                                    </p>
-
+                                    <p class="hover-link faixa faixaNum" data-track="8" onclick="loadGroup(8)">Altura</p>
                                 </div>
                                 <div class="faixaTitle">
-                                    <p class="hover-link faixa faixaNum" data-track="9" onclick="loadGroup(9)">
-                                        Humanidade</p>
+                                    <p class="hover-link faixa faixaNum" data-track="9" onclick="loadGroup(9)">Humanidade</p>
                                 </div>
                                 <div class="faixaTitle">
-                                    <p class="hover-link faixa textAlignRight faixaNum" data-track="10"
-                                        onclick="loadGroup(10)">
-                                        Arqueologia</p>
+                                    <p class="hover-link faixa textAlignRight faixaNum" data-track="10" onclick="loadGroup(10)">Arqueologia</p>
                                 </div>
                                 <p><br></p>
-                                <p id="creditButton" class="hover-link">Créditos</p>
+                                <p id="creditButton" class="mobileNone hover-link">Créditos</p>
                                 <p><br></p>
                                 <p><br></p>
                                 <p><br></p>
                                 <p><br></p>
                             </div>
+                        </div>
+                        <div id="faixaInteration3">
+                            <p><br></p>                           
+                            <p id="creditButton2" class="desktopNone hover-link">Créditos</p>
                         </div>
                         <p id="loading">Loading...</p>
                     </div>
