--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <p><br></p>                           
                             <p id="creditButton2" class="desktopNone hover-link">Créditos</p>
                         </div>
-                        <p id="loading">Loading...</p>
+                        <p id="loading" class="mobileNone">Loading...</p>
                     </div>
                 </div>
             </div>
