--- a/index.html
+++ b/index.html
@@ -213,7 +213,6 @@
                             <div id="trackPlayingdiv">
                                 <p id="trackPlaying"></p>
                             </div>
-                            <p><br></p>
                             <p id="menuToggle" class="hover-link">Menu</p>
                             <div id="menuContent2" >
                                 <div class="faixaTitle">
@@ -265,7 +264,7 @@
                             <p><br></p>                           
                             <p id="creditButton2" class="desktopNone hover-link">Créditos</p>
                         </div>
-                        <p id="loading" class="mobileNone">Loading...</p>
+                        <p id="loading">Loading...</p>
                     </div>
                 </div>
             </div>
