--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="introSelvagem visible" id="introSelvagem">
             <div class="teaser">
                 <video class="video" autoplay loop muted>
-                    <source src="data/Teaser.mp4" type="video/mp4">
+                    <source src="data/Teaser_reduced.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="grid gridIntro">
